htdocs/theme/raw/static/style/style.css
/* ... */
div.error,
span.error {
    background: #FEE7E7 url(../images/failure.png) no-repeat 4px 4px;
    padding: 5px 5px 5px 27px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    line-height: 1.333em;
    margin-bottom: 3px;
    font-size: 1em;
    color: #333333;
}
div.info {
    background: #E5ECF4 url(../images/info.png) no-repeat 4px 4px;
    padding: 5px 5px 5px 27px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    line-height: 1.333em;
    margin-bottom: 3px;
    font-size: 1em;
    color: #333333;
}
div.warning,
.errmsg {
    background: #FFF3E0 url(../images/warning.png) no-repeat 4px 3px;
    padding: 5px 5px 5px 26px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    line-height: 1.333em;
    margin-bottom: 3px;
    font-size: 1em;
    color: #333333;
}
/* system messages between nav and main content */
#messages {
    padding: 0;
    margin: 10px 0;
}
/* system messages */
.message {
    margin: 5px 0;
    padding: 5px;
    background: #F6F6F6;
    color: #333333;
    text-align: center;
}
.message p:first-child {
    margin-top: 0;
}
.message p:last-child {
    margin-bottom: 0;
}
/* warning messages without icon */
.attentionmessage {
    background: #FFF3E0;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    margin: 5px 0;
    padding: 5px;
    text-align: center;
}
.attentionform {
    margin: 10px auto 5px auto;
}
/* delete messages without icon */
.deletemessage {
    background: #FEE7E7;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    margin: 5px 0;
    padding: 5px;
    text-align: center;
}
.deletemessage .deletebuttonwrap {
    padding: 5px;
}
/******************** General text ********************/
.s {
    font-size: 0.917em;
}
.description,
.unvalidated,
.postdetails {
    font-size: 0.917em;
    color: #707070;
    font-weight: normal;
}
.nowrap {
    white-space: nowrap;
}
.dull {
    color: #707070;
}
.tags {
    margin: 20px 0 10px 0;
}
/* some common listing text styles */
.title,
.title:first-child {
    font-size: 1.167em;
    margin: 3px 0;
}
.detail {
    margin: 3px 0;
}
.detail br {
    line-height: 1px;
    height: 1px;
    content: " ";
}
.postedon {
    font-size: 0.917em;
    line-height: 1.167em;
}
ul.listing {
    list-style: none;
}
.listing .listrow {
    padding: 3px 5px;
    margin: 0;
}
.listing .listrow h3.title {
    display: inline-block;
}
.listing .tags {
    margin: 3px 0;
}
/******************** Tables ********************/
table {
    border-spacing: 0;
    border-collapse: collapse;
}
table.fixwidth {
    table-layout: fixed;
}
th {
    padding: 3px 5px;
    text-align: left;
    line-height: 1.25em;
    vertical-align: top;
}
thead th {
    white-space: nowrap;
    border-bottom: 1px solid #CCCCCC;
    font-size: 1.167em;
}
/* those that need to align with td */
.file th,
.html th,
.text th,
.tags th,
.select th,
.wysiwyg th,
.filebrowser th,
.textarea th,
.userlist th,
.emaillist th,
.calendar th,
.radio th,
.checkbox th,
.expiry th,
.bytes th,
.date th,
.password th,
.multitext th,
.autocomplete th {
    padding-top: 8px;
}
td {
    padding: 3px 5px;
    vertical-align: top;
}
.valign {
    padding: 6px 5px 3px 5px;
}
tfoot td {
    padding: 5px 0;
}
/* small td for tickboxes and icons */
td.narrow {
    padding: 3px;
    width: 25px;
}
/* to align tag in edit tables */
tr.tags td div div {
    line-height: 2em;
}
/* Alternative row background */
.r0,
.r0 td,
.d0 {
    background-color: #F9F9F9;
}
.r1,
.r1 td,
.d1 {
    background-color: #F3F3F3;
}
/* Highlight row background  */
tr.highlight td,
tr.highlight-file td {
    background-color: #FFFCD8;
}
/* icon container (icons are 24px wide) */
td.icon-container {
    vertical-align: top;
    width: 25px;
    text-align: center;
}
td.icon-container img {
    max-width: 25px;
}
/* profile icon alignments */
.profile-icon-container {
    vertical-align: middle;
    margin-right: 2px;
}
.profile-icon-left {
    margin-right: 10px;
    margin-bottom: 10px;
    float: left;
}
.profile-icon-right {
    margin-left: 10px;
    margin-bottom: 10px;
    float: right;
}
/* table with preserved whitespace */
.messagebody {
    white-space: pre-wrap;
    overflow: auto;
}
.messagebody-newpost,
.messagebody-feedback {
    white-space: normal;
}
/* expandable */
.valign-middle {
    vertical-align: middle;
}
.expandable-head th {
    font-size: 1em;
    white-space: normal;
}
table.attachments thead.expandable-head td {
    background-color: #DDDDDD;
}
.expandable-head a.toggle {
    font-weight: bold;
    background-image: url(../images/expand.png);
    background-repeat: no-repeat;
    background-position: 2px 50%;
    padding-left: 18px;
    display: inline-block;
}
.expandable-head a.toggle.textonly {
    background-image: none;
    padding-left: inherit;
}
.expandable-head a.toggle.expanded {
    background-image: url(../images/expanded.png);
    background-position: 2px 50%;
}
.expandable-head a.toggle.textonly.expanded {
    background-image: none;
}
/******************** Forms ********************/
form {
    margin: 0;
    padding: 0;
}
/* required */
.requiredmarker {
    color: #EE0000;
}
/* description */
.pieform td.description {
    padding-top: 0 !important;
}
/* label */
label {
    font-weight: bold;
}
.radio td label {
    font-weight: normal;
    line-height: 1.667em;
}
.checkboxes td label {
    font-weight: normal;
}
/* fieldset */
fieldset,
.pseudofieldset {
    padding: 10px 15px;
    margin: 10px 0;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    border: 1px solid #d1d1d1;
}
.pseudofieldset {
    padding: 20px;
}
fieldset.collapsible {
    padding: 10px 15px;
    margin: 5px 0;
}
.pseudofieldset.collapsible {
    padding: 20px;
    margin: 30px 0;
}
/* ... */

